JavaDoc is element with translate, rewire