@@ -239,10 +239,10 @@ public class LambdaImpl extends ExpressionImpl implements Lambda {
         Expression tLambda = translationMap.translateExpression(this);
         if (tLambda == null) return this;
         if (tLambda != this) return tLambda;
-        TypeInfo tTypeInfo = methodInfo.typeInfo().translate(translationMap);
+        TypeInfo tTypeInfo = methodInfo.typeInfo().translate(translationMap).getFirst();
         if (tTypeInfo != methodInfo.typeInfo()) {
             assert tTypeInfo.methods().size() == 1;
-            MethodInfo implementationOfSam = tTypeInfo.methods().get(0);
+            MethodInfo implementationOfSam = tTypeInfo.methods().getFirst();
             return new LambdaImpl(comments(), source(), implementationOfSam, outputVariants);
         }
         return this;
